--- a/app/views/partials/_navbarlog.html.erb
+++ b/app/views/partials/_navbarlog.html.erb
@@ -26,7 +26,9 @@
       <li class="nav-item active">
         <div class="dropdown show">
             <a class=" dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"  />
-              <%= cl_image_tag current_user.photo.key, height: 40, width: 40, crop: :thumb, gravity: :face, class: "card-avatar avatar" %>
+              <% if current_user.photo %>
+                <%= cl_image_tag current_user.photo.key, height: 40, width: 40, crop: :thumb, gravity: :face, class: "card-avatar avatar" %>
+              <% end %>
             </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/profile">My Profile</a>
