--- a/app/views/partials/_navbarlog.html.erb
+++ b/app/views/partials/_navbarlog.html.erb
@@ -25,9 +25,11 @@
 
       <li class="nav-item active">
         <div class="dropdown show">
-            <a class=" dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"  />
-              <% if current_user.photo %>
+            <a id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"  />
+              <% if current_user.photo.present? %>
                 <%= cl_image_tag current_user.photo.key, height: 40, width: 40, crop: :thumb, gravity: :face, class: "card-avatar avatar" %>
+              <% else %>
+                <div class="fake-avatar"><%= current_user.name[0].upcase %></div>
               <% end %>
             </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
